zoom page updates

--- a/interactions/zoom.html
+++ b/interactions/zoom.html
@@ -1,11 +1,11 @@
 ---
-layout: widgets
+layout: interactions
 title: Zoom
 name: zoom
-widget_selected: selected
-description: <p>A widget that zooms into an image and displays a higher resolution image that can be panned.</p>
+interaction_selected: selected
+description: <p>An interaction that zooms into an image and displays a higher resolution image that can be panned.</p>
 basic_tab:
-  data-ur-set="zoom": add this attribute to the element that wraps the whole widget
+  data-ur-set="zoom": add this attribute to the element that wraps the whole interaction
   data-ur-zoom-component="view_container": for wrapping the whole view container
   data-ur-zoom-component="img": the img element
   data-ur-zoom-component="button": zoom in/out button
@@ -13,7 +13,7 @@ basic_tab:
 advanced_tab:
   Required:
     view_container:
-      - this div should wrap the whole widget
+      - this div should wrap the whole interaction
       - "multiple?: false"
       - "state: active / inactive (reflects currently visible item)"
       - attributes:
@@ -37,16 +37,16 @@ advanced_tab:
       - "state: enabled / disabled"
 instance:
   zoom(): zooms in/out
-  reset(): resets the zoom widget
+  reset(): resets the zoom interaction
 ---
 <!-- Zoom Demonstration -->
 <h2>Demonstration</h2>
-<p>Basic zoom widget </p>
+<p>Basic zoom interaction </p>
 <div id="zoom_demonstration" data-ur-set="tabs" class="ur_ex">
-  <h3 data-ur-tabs-component="button" data-ur-tab-id="widget" data-ur-state="enabled"> Example</h3>
+  <h3 data-ur-tabs-component="button" data-ur-tab-id="interaction" data-ur-state="enabled"> Example</h3>
   <h3 data-ur-tabs-component="button" data-ur-tab-id="html">The Code</h3>
 
-  <div id="zoom_widget" class="example_widget example"  data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state="enabled">
+  <div id="zoom_interaction" class="example_interaction example"  data-ur-tabs-component="content" data-ur-tab-id="interaction" data-ur-state="enabled">
     <div data-ur-set="zoom" data-ur-zoom-component="view_container">
       <img data-ur-zoom-component="img" width="500" height="287" src="{{site.url}}../images/pic5.jpeg" data-ur-src="{{site.url}}../images/pic4.jpeg">
       <span data-ur-zoom-component="button">
@@ -54,40 +54,20 @@ instance:
         <span>&minus;</span>
       </span>
       <div data-ur-zoom-component="loading" data-ur-state="disabled">Loading&hellip;</div>
-      <script>
-        // I use display: inline-block to center the img but this leaves whitespace so
-        // remove the whitespace with JS (font-size: 0px trick doesn't work on Android)
-        // You can also use display: box or table-cell to get vertical alignment instead.
-        var nodes = x$("[data-ur-set='zoom']")[0].childNodes;
-        for (var i in nodes) {
-          if (nodes[i].nodeType == Node.TEXT_NODE)
-            nodes[i].textContent = nodes[i].textContent.trim();
-        }
-      </script>
     </div>
 
   </div>
 
-  <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="html">
+  <div class="interaction_html" data-ur-tabs-component="content" data-ur-tab-id="html">
 
 {% highlight html %}
 <div data-ur-set="zoom" data-ur-zoom-component="view_container">
-<img data-ur-zoom-component="img" width="500" height="287" src="{{site.url}}../images/pic5.jpeg" data-ur-src="{{site.url}}../images/pic4.jpeg">
-<span data-ur-zoom-component="button">
-  <span>+</span>
-  <span>&minus;</span>
-</span>
-<div data-ur-zoom-component="loading" data-ur-state="disabled">Loading&hellip;</div>
-<script>
-  // I use display: inline-block to center the img but this leaves whitespace so
-  // remove the whitespace with JS (font-size: 0px trick doesn't work on Android)
-  // You can also use display: box or table-cell to get vertical alignment instead.
-  var nodes = x$("[data-ur-set='zoom']")[0].childNodes;
-  for (var i in nodes) {
-    if (nodes[i].nodeType == Node.TEXT_NODE)
-      nodes[i].textContent = nodes[i].textContent.trim();
-  }
-</script>
+  <img data-ur-zoom-component="img" width="500" height="287" src="{{site.url}}../images/pic5.jpeg" data-ur-src="{{site.url}}../images/pic4.jpeg">
+  <span data-ur-zoom-component="button">
+    <span>&plus;</span>
+    <span>&minus;</span>
+  </span>
+  <div data-ur-zoom-component="loading" data-ur-state="disabled">Loading&hellip;</div>
 </div>
 {% endhighlight %}
 
@@ -95,12 +75,12 @@ instance:
   <hr />
 </div>
 
-<!-- Required Style -->
+<!-- Recommended Style -->
 <div class='wrapper'>
-  <h2> Required Styles </h2>
+  <h2> Recommended Styles </h2>
   <div class='css'>
 {% highlight scss %}
-/* Required SCSS Styling */
+/* Recommended SCSS Styling (using the Bourbon mixin library) */
 
 [data-ur-zoom-component="view_container"] {
   overflow: hidden;
@@ -109,11 +89,11 @@ instance:
 [data-ur-set="zoom"] {
   &[data-ur-state="enabled-in"], &[data-ur-state="enabled-out"] {
     [data-ur-zoom-component="img"] {
-      @include transition-duration(0.4s);
-      @include transition-timing-function(ease-in-out);
-      -webkit-transition-property: -webkit-transform;
-      -moz-transition-property: -moz-transform;
-      -o-transition-property: -o-transform;
+      @include transition(transform 0.4s ease-in-out);
+    }
+  &[data-ur-state="enabled"] {
+    [data-ur-zoom-component="img"] {
+      cursor: move;
     }
   }
 }
