--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ home_selected: selected
 
       <div id="carousel_widget" class="example_widget"  data-ur-tabs-component="content" data-ur-tab-id="carousel_widget" data-ur-state="enabled">
 
-        <div data-ur-set="carousel" data-ur-id="MyFirstCarousel" data-ur-clones=5>
+        <div data-ur-set="carousel" data-ur-id="MyFirstCarousel" data-ur-clones=5 data-ur-infinite="disabled">
           <span data-ur-carousel-component="count"> -- count -- </span>
           <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev" >
             Prev
@@ -31,24 +31,22 @@ home_selected: selected
           <div data-ur-carousel-component="button" data-ur-carousel-button-type="next" >
             Next
           </div>
-          <div data-ur-carousel-component="view_container" data-ur-infinite="disabled">
-            <div data-ur-carousel-component="scroll_container">
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample1.png' alt="1" />
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample2.png' alt="2" />
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample3.png' alt="3" />
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample4.png' alt="4" />
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample5.png' alt="5" />
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample6.png' alt="6" />
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample7.png' alt="7" />
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample8.png' alt="8" />
-            </div>
+          <div data-ur-carousel-component="scroll_container">
+            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample1.png' alt="1" />
+            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample2.png' alt="2" />
+            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample3.png' alt="3" />
+            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample4.png' alt="4" />
+            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample5.png' alt="5" />
+            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample6.png' alt="6" />
+            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample7.png' alt="7" />
+            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample8.png' alt="8" />
           </div>
         </div>
       </div>
 
       <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="carousel_html">
 {% highlight html %}
-<div data-ur-set="carousel" data-ur-carousel-component="view_container" data-ur-id="MyFirstCarousel">
+<div data-ur-set="carousel" data-ur-id="MyFirstCarousel">
   <span data-ur-carousel-component="count"> -- count -- </span>
   <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
   <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
@@ -68,22 +66,15 @@ home_selected: selected
 
       <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="carousel_CSS">
 {% highlight css %}
-div[data-ur-carousel-component="view_container"] {
-  width: 100%;
-  overflow-x: hidden;
-}
 div[data-ur-carousel-component="scroll_container"] > * {
   display: inline-block;
   float: left;
-}
-div[data-ur-carousel-component="button"][data-ur-state="disabled"] {
-  opacity: 0.3;
 }
 {% endhighlight %}
       </div>
     </div>
     <a href="/interactions/carousel.html" class="see_more_link">
-      More about carousel
+      More about carousel >
     </a>
     <hr />
   </div>
@@ -92,7 +83,7 @@ div[data-ur-carousel-component="button"][data-ur-state="disabled"] {
   <div class="demonstration">
     <h2> Tabs </h2>
     <div id="tab_demonstration" data-ur-set="tabs">
-      <h3 data-ur-tabs-component="button" data-ur-tab-id="widget_tabs" data-ur-state="enabled"> Widget</h3>
+      <h3 data-ur-tabs-component="button" data-ur-tab-id="widget_tabs" data-ur-state="enabled"> Interaction</h3>
 
       <h3 data-ur-tabs-component="button" data-ur-tab-id="html_tabs"> HTML</h3>
 
@@ -103,15 +94,15 @@ div[data-ur-carousel-component="button"][data-ur-state="disabled"] {
           <span data-ur-tabs-component="button" data-ur-tab-id="three"> Third </span>
 
           <div data-ur-tabs-component="content" data-ur-tab-id="one" data-ur-state="enabled">
-            <img width="100px" height="100px" src="../images/sample1.png?some_attr=noway">
+            <p class="tab_item">First tab content</p>
           </div>
 
           <div data-ur-tabs-component="content" data-ur-tab-id="two">
-            <img width="100px" height="100px" src="../images/sample2.png?some_attr=noway">
+            <p class="tab_item">Second tab content</p>
           </div>
 
           <div data-ur-tabs-component="content" data-ur-tab-id="three">
-            <img width="100px" height="100px" src="../images/sample3.png?some_attr=noway">
+            <p class="tab_item">Third tab content</p>
           </div>
         </div>
       </div>
@@ -122,23 +113,23 @@ div[data-ur-carousel-component="button"][data-ur-state="disabled"] {
   <span data-ur-tabs-component='button' data-ur-tab-id='second'> Second </span>
   <span data-ur-tabs-component='button' data-ur-tab-id='third'> Third </span>
 
-  <div data-ur-tabs-component='content' data-ur-tab-id='first' data-ur-state='enabled'>
-    <img width='100px' height='100px' src='{{site.url}}../images/sample1.png?some_attr=noway'/>
+  <div data-ur-tabs-component="content" data-ur-tab-id="one" data-ur-state="enabled">
+    <p class="tab_item">First tab content</p>
   </div>
 
-  <div data-ur-tabs-component='content' data-ur-tab-id='second'>
-    <img width='100px' height='100px' src='{{site.url}}../images/sample2.png?some_attr=noway'/>
+  <div data-ur-tabs-component="content" data-ur-tab-id="two">
+    <p class="tab_item">Second tab content</p>
   </div>
 
-  <div data-ur-tabs-component='content' data-ur-tab-id='third'>
-    <img width='100px' height='100px' src='{{site.url}}../images/sample3.png?some_attr=noway'/>
+  <div data-ur-tabs-component="content" data-ur-tab-id="three">
+    <p class="tab_item">Third tab content</p>
   </div>
 </div>
 {% endhighlight %}
       </div>
     </div>
     <a href="/interactions/tabs.html" class="see_more_link">
-      More about Tabs
+      More about tabs >
     </a>
     <hr />
   </div>
@@ -146,7 +137,7 @@ div[data-ur-carousel-component="button"][data-ur-state="disabled"] {
   <div class='demonstration' name='Simple'>
     <h2>Toggler</h2>
     <div id="accordion_demonstration" data-ur-set="tabs">
-      <h3 data-ur-tabs-component='button' data-ur-tab-id="toggler_widget"data-ur-state='enabled'>Widget</h3>
+      <h3 data-ur-tabs-component='button' data-ur-tab-id="toggler_widget"data-ur-state='enabled'>Interaction</h3>
 
       <h3 data-ur-tabs-component='button' data-ur-tab-id="toggler_html"> HTML</h3>
 
@@ -181,7 +172,7 @@ div[data-ur-carousel-component="button"][data-ur-state="disabled"] {
       </div>
     </div>
     <a href="/interactions/toggler.html" class="see_more_link">
-      More about Toggler
+      More about toggler >
     </a>
     <hr />
   </div> 
