interactions page updates

--- a/site/interaction_list.html
+++ b/site/interaction_list.html
@@ -19,39 +19,29 @@
 </nav>
 
     <div id="textbody">
-  <h1>Widgets</h1>
+  <h1>Interactions</h1>
   <div id="interaction_detail">
-    <h2>Widgets Included in Uranium</h2>
+    <h2>Interactions Included in Uranium</h2>
     <ul>
-      <li> <a href="interactions/carousel.html"> Carousel </a> </li>
-      <li> <a href="interactions/input_clear.html"> Input Clear </a> </li>
-      <li> <a href="interactions/geocode.html"> Geolocation </a></li>
-      <li> <a href="interactions/tabs.html"> Tabs </a> </li>
-      <li> <a href="interactions/toggler.html"> Toggler </a> </li>
-      <li> <a href="interactions/zoom.html"> Zoom </a></li>
+      <li><a href="interactions/carousel.html">Carousel</a></li>
+      <li><a href="interactions/input_clear.html">Input Clear</a></li>
+      <li><a href="interactions/geocode.html">Geolocation</a></li>
+      <li><a href="interactions/tabs.html">Tabs</a></li>
+      <li><a href="interactions/toggler.html">Toggler</a></li>
+      <li><a href="interactions/zoom.html">Zoom</a></li>
     </ul>
   </div>
   <div>
-    <h2>What is a Widget?</h2>
+    <h2>What is an Interaction?</h2>
     <div>
       <p>
-        Uranium is a group of widgets - but what <i>is</i> a widget, exactly? In Uranium, a widget is a behavior that you're assigning to HTML elements
-        on a page. It's a group of <i>attributes</i> you give to your HTML, allowing it to perform
-        a function.
+        Uranium is a group of interactions that enhance the functionality of an HTML element - but what <i>is</i> an interaction, exactly? In Uranium, an interaction is a behavior that you're assigning to HTML elements on a page. Uranium defines a group of <i>attributes</i> you can give to your HTML elements, allowing your users to interact with them in a new way.
       </p>
       <p>
-        Each widget page will give a brief description of the widget followed by the attributes necessary to add
-        to your HTML (and where to put them). Finally there will be a demonstration of the widget with its HTML
-        to illustrate the layout of the widget.
+        We've created pages to describe each interaction provided by Uranium. Each interaction page will give a brief description of the interaction, followed by the attributes necessary to add to your HTML (and where to put them), along with some recommended CSS. Finally there will be a demonstration of the interaction with its HTML to illustrate one possible way to take advantage of the interaction.
       </p>
       <p>
-        If you're a bit lost with these pages, you might want to check out the
-        <a href="tutorial.html">tutorial</a>
-        page, which takes you step-by-step through an example of implementing a widget.
-      </p>
-      <p>
-        Not all widgets work perfectly with every browser or device. Check out the <a href="compatibility">compatibility</a>
-        charts.
+        If you've gone through these demonstrations, and you're ready to take the next step, you might want to check out the <a href="tutorial.html">tutorial</a> page, which takes you step-by-step through some examples of implementing interaction.
       </p>
     </div>
   </div>
