--- a/index.html
+++ b/index.html
@@ -9,19 +9,51 @@ home_selected: selected
   <div id="small_desc">Fast, Lean Web Interaction Library.<small>*for mobile too!</small></div>
 </div><!-- top_wrapper-->
 <div id="textbody">
- 
-  <h1>Top ways to use Uranium</h1>
+  <div>
+    <h1>What is Uranium?</h1>
+    <p>
+      Uranium is a set of interactions &ndash; self-contained bits of code that allow you to do neat, interactive things on your website.
+    </p>
+    <div id="how_to_use">
+      <h4>How to Use:</h4>
+      <ol>
+        <li>Include the Uranium library</li>
+        <li>Give HTML pre-defined attributes</li>
+        <li>&hellip; that's it!</li>
+      </ol>
+    </div>
+    <p>
+      It's seriously that easy. We've put in all the hard work to make awesome interactions that are
+      really easy to use.
+    </p>
+    <p>
+      Uranium is perfect for mobile development; lots of the interactions were made with that in mind. But, as you can see by the examples below, they're great on a desktop site too.
+    </p>
+  </div>
+  <div>
+    <h2>What is an Interaction?</h2>
+    <div>
+      <p>
+        We define interactions as behaviors that enhance the functionality of an HTML element. Uranium defines a group of <i>attributes</i> you can give to your HTML elements, allowing your users to interact with them in a new way.
+      </p>
+      <p>
+        We've created pages to describe each interaction provided by Uranium, accessible from the menu above. As well as those pages, you might want to check out the <a href="{{site.url}}tutorials/getting_started.html">getting started tutorial</a>, which takes you step-by-step through implementing a toggler interaction.
+      </p>
+    </div>
+  </div>
+  
+  <h1>Top Ways to Use Uranium</h1>
   <!-- Test -->
   <div class="demonstration">
     <h2> Carousel </h2>
     <div id="carousel_demonstration" data-ur-set="tabs">
-      <h3 data-ur-tabs-component="button" data-ur-tab-id="carousel_widget" data-ur-state="enabled"> Interaction</h3>
+      <h3 data-ur-tabs-component="button" data-ur-tab-id="carousel_interaction" data-ur-state="enabled"> Interaction</h3>
 
       <h3 data-ur-tabs-component="button" data-ur-tab-id="carousel_html">HTML</h3>
 
       <h3 data-ur-tabs-component="button" data-ur-tab-id="carousel_CSS">CSS</h3>
 
-      <div id="carousel_widget" class="example_widget"  data-ur-tabs-component="content" data-ur-tab-id="carousel_widget" data-ur-state="enabled">
+      <div id="carousel_interaction" class="example_interaction"  data-ur-tabs-component="content" data-ur-tab-id="carousel_interaction" data-ur-state="enabled">
 
         <div data-ur-set="carousel" data-ur-id="MyFirstCarousel" data-ur-clones=5 data-ur-infinite="disabled">
           <span data-ur-carousel-component="count"> -- count -- </span>
@@ -44,7 +76,7 @@ home_selected: selected
         </div>
       </div>
 
-      <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="carousel_html">
+      <div class="interaction_html" data-ur-tabs-component="content" data-ur-tab-id="carousel_html">
 {% highlight html %}
 <div data-ur-set="carousel" data-ur-id="MyFirstCarousel">
   <span data-ur-carousel-component="count"> -- count -- </span>
@@ -64,7 +96,7 @@ home_selected: selected
 {% endhighlight %}
       </div>
 
-      <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="carousel_CSS">
+      <div class="interaction_css" data-ur-tabs-component="content" data-ur-tab-id="carousel_CSS">
 {% highlight css %}
 div[data-ur-carousel-component="scroll_container"] > * {
   display: inline-block;
@@ -83,11 +115,13 @@ div[data-ur-carousel-component="scroll_container"] > * {
   <div class="demonstration">
     <h2> Tabs </h2>
     <div id="tab_demonstration" data-ur-set="tabs">
-      <h3 data-ur-tabs-component="button" data-ur-tab-id="widget_tabs" data-ur-state="enabled"> Interaction</h3>
+      <h3 data-ur-tabs-component="button" data-ur-tab-id="tabs_interaction" data-ur-state="enabled"> Interaction</h3>
 
-      <h3 data-ur-tabs-component="button" data-ur-tab-id="html_tabs"> HTML</h3>
+      <h3 data-ur-tabs-component="button" data-ur-tab-id="tabs_html"> HTML</h3>
 
-      <div id="tab_widget" class="example_widget" data-ur-tabs-component="content" data-ur-tab-id="widget_tabs" data-ur-state="enabled">
+      <h3 data-ur-tabs-component="button" data-ur-tab-id="tabs_CSS">CSS</h3>
+
+      <div id="tab_widget" class="example_widget" data-ur-tabs-component="content" data-ur-tab-id="tabs_interaction" data-ur-state="enabled">
         <div data-ur-set="tabs" data-ur-id="tabs_example">
           <span data-ur-tabs-component="button" data-ur-tab-id="one" data-ur-state="enabled"> First </span>
           <span data-ur-tabs-component="button" data-ur-tab-id="two"> Second </span>
@@ -106,7 +140,7 @@ div[data-ur-carousel-component="scroll_container"] > * {
           </div>
         </div>
       </div>
-      <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="html_tabs">
+      <div class="interaction_html" data-ur-tabs-component="content" data-ur-tab-id="tabs_html">
 {% highlight html %}
 <div data-ur-set='tabs'>
   <span data-ur-tabs-component='button' data-ur-tab-id='first' data-ur-state='enabled'> First </span>
@@ -127,6 +161,14 @@ div[data-ur-carousel-component="scroll_container"] > * {
 </div>
 {% endhighlight %}
       </div>
+      <div class="interaction_css" data-ur-tabs-component="content" data-ur-tab-id="tabs_CSS">
+{% highlight css %}
+/* Recommended CSS */
+div[data-ur-tabs-component="content"][data-ur-state="disabled"] {
+  display: none;
+}
+{% endhighlight %}
+      </div>
     </div>
     <a href="/interactions/tabs.html" class="see_more_link">
       More about tabs >
@@ -137,11 +179,13 @@ div[data-ur-carousel-component="scroll_container"] > * {
   <div class='demonstration' name='Simple'>
     <h2>Toggler</h2>
     <div id="accordion_demonstration" data-ur-set="tabs">
-      <h3 data-ur-tabs-component='button' data-ur-tab-id="toggler_widget"data-ur-state='enabled'>Interaction</h3>
+      <h3 data-ur-tabs-component='button' data-ur-tab-id="toggler_interaction"data-ur-state='enabled'>Interaction</h3>
 
       <h3 data-ur-tabs-component='button' data-ur-tab-id="toggler_html"> HTML</h3>
 
-      <div id="tab_widget" class="example_widget"  data-ur-tabs-component="content" data-ur-tab-id="toggler_widget" data-ur-state='enabled'>
+      <h3 data-ur-tabs-component="button" data-ur-tab-id="toggler_CSS">CSS</h3>
+
+      <div id="toggler_interaction" class="example_interaction"  data-ur-tabs-component="content" data-ur-tab-id="toggler_interaction" data-ur-state='enabled'>
         <div data-ur-set='toggler'>
           <div data-ur-toggler-component='button'>
             Click Here!
@@ -156,7 +200,7 @@ div[data-ur-carousel-component="scroll_container"] > * {
           </ul>
         </div> 
       </div>
-    <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="toggler_html">
+    <div class="interaction_html" data-ur-tabs-component="content" data-ur-tab-id="toggler_html">
 {% highlight html %}
 <div data-ur-set='toggler'>
   <div data-ur-toggler-component='button'>Click Here!</div>
@@ -168,6 +212,14 @@ div[data-ur-carousel-component="scroll_container"] > * {
     <li> Shirts </li>
   </ul>
 </div>
+{% endhighlight %}
+      </div>
+      <div class="interaction_css" data-ur-tabs-component="content" data-ur-tab-id="toggler_CSS">
+{% highlight css %}
+/* Recommended CSS */
+div[data-ur-toggler-component="content"][data-ur-state="disabled"] {
+  display: none;
+}
 {% endhighlight %}
       </div>
     </div>
