The advanced tutorial based around creating a carousel

--- a/documentation/getting_started.html
+++ b/documentation/getting_started.html
@@ -12,7 +12,7 @@ documentation_selected: selected
       <div class="tutorial_para">
         <p>We've worked hard to make Uranium as streamlined as possible, requiring the least possible effort from the user.</p>
         <p>Part of this is ensuring that the widgets are easy to use and once you've learnt how to implement one, the same methods are easily applied to other widgets.</p>
-        <p>As such, here we're going to go over an example of how to use widgets. We'll use the <a href="{{site.url}}toggler.html">toggler</a> as a model.</p>
+        <p>As such, here we're going to go over an example of how to use widgets. We'll use the <a href="{{site.url}}interactions/toggler.html">toggler</a> as a model.</p>
       </div>
     </div>
   </div> <!-- wrapper -->
@@ -171,7 +171,7 @@ documentation_selected: selected
           <p>Pretty much all the widgets in Uranium work in a similar way. You add special attributes to the tags in your HTML, import the javascript, and maybe do a little CSS re-styling.
           </p>
           <p>
-            Now we've whetted your appetite, you probably want to check out some more widgets. If you want to go through another tutorial, we have <a href="">an intermediate-level tutorial</a> that covers how to add a carousel. If you're feeling pretty confident, we also have <a href="widget_list.html">a list of all the widgets bundled with Uranium</a>.
+            Now we've whetted your appetite, you probably want to check out some more widgets. If you want to go through another tutorial, we have <a href="">an advanced tutorial</a> that covers how to implement a carousel. If you're feeling pretty confident, we also have <a href="widget_list.html">a list of all the widgets bundled with Uranium</a>.
           </p>
         </div> <!-- tutorial para -->
       </div>
