--- a/interactions/carousel.html
+++ b/interactions/carousel.html
@@ -18,7 +18,7 @@ advanced_tab:
       - this div should wrap the whole carousel.
       - "multiple?: false"
       - "state: N/A"
-      - the following attributes have default settings in italics.
+      - the following attributes have default settings in <em>italics</em>.
       - attributes :
         - "optional: <code>data-ur-touch</code>: <em>enabled</em>/disabled</li>"
         - "optional: <code>data-ur-vertical-scroll</code>: <em>enabled</em>/disabled (specify vertical scrolling behavior while touching carousel)</li>"
