--- a/site/attributes_explanation.html
+++ b/site/attributes_explanation.html
@@ -7,7 +7,8 @@
 <link href="http://fonts.googleapis.com/css?family=Crete+Round:400italic|Open+Sans:300,300italic,400|Ultra|Yellowtail" rel="stylesheet" />
 <link href="/stylesheets/main.css" rel="stylesheet" />
 <script src="/src/jquery-1.9.1.min.js"></script>
-<script src="/src/jquery.uranium.js"></script>
+<!-- <script src="/src/jquery.uranium.js"></script> -->
+<script src="/src/jqur135.js"></script>
 
 <script type="text/javascript">
 
