--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ home_selected: selected
     <div id="how_to_use">
       <h4>How to Use:</h4>
       <ol>
-        <li>Include the Uranium library</li>
-        <li>Give HTML pre-defined attributes</li>
+        <li>Include the Uranium library and jQuery</li>
+        <li>Give your HTML pre-defined data attributes</li>
         <li>&hellip; that's it!</li>
       </ol>
     </div>
@@ -34,10 +34,10 @@ home_selected: selected
     <h2>What is an Interaction?</h2>
     <div>
       <p>
-        We define interactions as behaviors that enhance the functionality of an HTML element. Uranium defines a group of <i>attributes</i> you can give to your HTML elements, allowing your users to interact with them in a new way.
+        We define interactions as behaviors that enhance the functionality of a set of HTML elements. Uranium defines several <i>data attributes</i> you can give to your HTML elements, allowing your users to interact with them in a new way.
       </p>
       <p>
-        We've created pages to describe each interaction provided by Uranium, accessible from the menu above. As well as those pages, you might want to check out the <a href="{{site.url}}documentation/getting_started.html">getting started tutorial</a>, which takes you step-by-step through implementing a toggler interaction.
+        We've created pages to describe each interaction provided by Uranium, accessible from the menu above. While your'e up there, you might also want to check out the Training menu for our <a href="{{site.url}}documentation/overfiew.html">overview documentation</a>, <a href="{{site.url}}documentation/getting_started.html">getting started tutorial</a>, and <a href="{{site.url}}documentation/advanced.html">advanced tutorial</a>.
       </p>
     </div>
   </div>
