header and index page adjustments

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ home_selected: selected
     <h2>What is an Interaction?</h2>
     <div>
       <p>
-        We define interactions as behaviors that enhance the functionality of a set of HTML elements. Uranium defines several <i>data attributes</i> you can give to your HTML elements, allowing your users to interact with them in a new way.
+        We define interactions as behaviors that enhance the functionality of a set of HTML elements. Uranium defines several <em>data attributes</em> you can give to your HTML elements, allowing your users to interact with them in a new way.
       </p>
       <p>
-        We've created pages to describe each interaction provided by Uranium, accessible from the menu above. While your'e up there, you might also want to check out the Training menu for our <a href="{{site.url}}documentation/overfiew.html">overview documentation</a>, <a href="{{site.url}}documentation/getting_started.html">getting started tutorial</a>, and <a href="{{site.url}}documentation/advanced.html">advanced tutorial</a>.
+        We've created pages to describe each interaction provided by Uranium, accessible from the menu above. While your'e up there, you might also want to check out the Training menu for our <a href="{{site.url}}documentation/overview.html">overview documentation</a>, <a href="{{site.url}}documentation/getting_started.html">getting started tutorial</a>, and <a href="{{site.url}}documentation/advanced.html">advanced tutorial</a>.
       </p>
     </div>
   </div>
@@ -230,7 +230,7 @@ div[data-ur-toggler-component="content"][data-ur-state="disabled"] {
   </div> 
     
   <!-- Uranium is used by -->
-  <h2>Uranium is used by...</h2>
+  <h2>Sites using Uranium include...</h2>
   <div id="threelogoholder">
     <a href="http://m.macys.com/"><img src="images/BW_macys.png" alt="Macy's" /></a>
     <a href="http://m.cancer.org/"><img src="images/BW_AmCancer.png" alt="ACS" /></a>
