--- a/site/index.html
+++ b/site/index.html
@@ -29,7 +29,7 @@
     <a id="github_ribbon" href="https://github.com/moovweb/uranium" target="_blank">Fork me<span class="desktop"> on GitHub</span></a>
 <nav id="menu">
   
-  <a href="/" id="uraniumlogo" class="selected"></a><section class='menu_widget'>	<a href="#" >Interactions</a>	<ul>		<li><a href="/interactions/carousel.html">Carousel</a></li><li><a href="/interactions/geocode.html">Geolocation</a></li>		<li><a href="/interactions/input_clear.html">Input Clear</a></li>		<li><a href="/interactions/tabs.html">Tabs</a></li>		<li><a href="/interactions/toggler.html">Toggler</a></li>		<li><a href="/interactions/zoom.html">Zoom</a></li>	</ul></section><section class="menu_widget"><a href="#" >Training</a><ul><li><a href="/documentation/overview.html">Overview</a></li><li><a href="/documentation/getting_started.html">Getting Started</a></li><li><a href="/documentation/advanced.html">Advanced</a></li></ul></section><a href="/download.html">Download</a>
+  <a href="/" id="uraniumlogo" class="selected"></a><section class='menu_widget'>	<a href="#" >Interactions</a>	<ul>		<li><a href="/interactions/carousel.html">Carousel</a></li><li><a href="/interactions/geocode.html">Geolocation</a></li>		<li><a href="/interactions/input_clear.html">Input Clear</a></li>		<li><a href="/interactions/tabs.html">Tabs</a></li>		<li><a href="/interactions/toggler.html">Toggler</a></li>		<li><a href="/interactions/zoom.html">Zoom</a></li>	</ul></section><section class="menu_widget"><a href="#" >Training</a><ul><li><a href="/documentation/overview.html">Overview</a></li><li><a href="/documentation/getting_started.html">Basic Use</a></li><li><a href="/documentation/advanced.html">Advanced Use</a></li><li><a href="/documentation/philosophy.html">Philosophy</a></li><li><a href="/documentation/model.html">Model</a></li><li><a href="/documentation/styling.html">Styling</a></li><li><a href="/documentation/grouping.html">Grouping</a></li></ul></section><a href="/download.html">Download</a>
 </nav>
 
     <div class="top_wrapper desktop">
@@ -61,10 +61,10 @@
     <h2>What is an Interaction?</h2>
     <div>
       <p>
-        We define interactions as behaviors that enhance the functionality of a set of HTML elements. Uranium defines several <i>data attributes</i> you can give to your HTML elements, allowing your users to interact with them in a new way.
+        We define interactions as behaviors that enhance the functionality of a set of HTML elements. Uranium defines several <em>data attributes</em> you can give to your HTML elements, allowing your users to interact with them in a new way.
       </p>
       <p>
-        We've created pages to describe each interaction provided by Uranium, accessible from the menu above. While your'e up there, you might also want to check out the Training menu for our <a href="documentation/overfiew.html">overview documentation</a>, <a href="documentation/getting_started.html">getting started tutorial</a>, and <a href="documentation/advanced.html">advanced tutorial</a>.
+        We've created pages to describe each interaction provided by Uranium, accessible from the menu above. While your'e up there, you might also want to check out the Training menu for our <a href="documentation/overview.html">overview documentation</a>, <a href="documentation/getting_started.html">getting started tutorial</a>, and <a href="documentation/advanced.html">advanced tutorial</a>.
       </p>
     </div>
   </div>
@@ -251,7 +251,7 @@
   </div> 
     
   <!-- Uranium is used by -->
-  <h2>Uranium is used by...</h2>
+  <h2>Sites using Uranium include...</h2>
   <div id="threelogoholder">
     <a href="http://m.macys.com/"><img src="images/BW_macys.png" alt="Macy's" /></a>
     <a href="http://m.cancer.org/"><img src="images/BW_AmCancer.png" alt="ACS" /></a>
